@@ -1,4 +1,5 @@
 0.x.y (dd-MMM-yy):
+ - Add LocalBaseDependency for '${LOCALBASE}/path/to/file:origin'
 
 0.1.5 (04-Apr-17):
  - feature: update code to be mypy-0.501 compatiable
